--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1388,11 +1388,31 @@ body {
   background-color: #f9f9f9;
   color: #000000;
 }
-.jq-selectbox .jq-selectbox__trigger-arrow {
-  border-top-color: contrast(currentColor, #000000, #ffffff, 30%);
+.jq-selectbox .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:after,
+.jq-number__spin.plus:after {
+  transition: 0.4s;
+  border-top-color: currentColor;
+  border-bottom-color: currentColor;
 }
-.jq-selectbox:hover .jq-selectbox__trigger-arrow {
+.jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:hover:after,
+.jq-number__spin.plus:hover:after {
   border-top-color: #f9f9f9;
+  border-bottom-color: #f9f9f9;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
+  color: #000000 !important;
+  background-color: #f9f9f9 !important;
+  box-shadow: none!important;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td:hover,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
+  color: #ffffff !important;
+  background: #ff3366 !important;
+  box-shadow: none !important;
 }
 .cid-r9fuvnJDNw {
   background-image: url("../../../assets/images/img-7435-2000x1500.jpg");
@@ -1432,7 +1452,7 @@ body {
 .cid-refl9H1HJC {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/fullsizeoutput-15d-1-2000x1500.jpg");
+  background-image: url("../../../assets/images/fullsizeoutput-15d-2-2000x1500.jpg");
 }
 .cid-refl9H1HJC .media-container-column {
   align-items: center;
